kubernetes/applications/sidequests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sidequests
  namespace: apps
spec:
  selector:
    matchLabels:
      app: "sidequests"
  serviceName: "sidequests"
  replicas: 1
  template:
    metadata:
      labels:
        app: sidequests
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 10
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      imagePullSecrets:
        - name: docker-reg
      containers:
        - name: sidequest
          image: need4swede/sidequests:1.1.5
          imagePullPolicy: Always
          resources:
            requests:
              memory: 1Gi
              cpu: 500m
              ephemeral-storage: 8Gi
            limits:
              memory: 1Gi
              cpu: 500m
              ephemeral-storage: 8Gi
          ports:
            - containerPort: 8080
              name: web
          volumeMounts:
            - name: sidequests-data
              mountPath: /app/instance
  volumeClaimTemplates:
    - metadata:
        name: sidequests-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "openebs"
        resources:
          requests:
            storage: 8Gi
