kubernetes/applications/sidequests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sidequests-svc
  namespace: apps
  labels:
    app: sidequests
spec:
  ports:
    - port: 8080
      name: web
  selector:
    app: sidequests
