kubernetes/applications/sidequests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sidequests-ingress
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &sidequestsHost sidequests.mcmumf.dev
      secretName: sidequests-cert
  rules:
    - host: *sidequestsHost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sidequests-svc
                port:
                  number: 8080
